Timecode is not used in tracking #29688

Closed
opened 2011-12-24 21:52:34 +01:00 by David Sheftick · 3 comments

%%%Blender does not use the timecode index when tracking video files. This causes vary poor tracking results in video files that require TCs. If the entire sequence is cashed into memory then the tracking works fine, but once it comes to a point that is not yet cashed it goes crazy.
I am not sure where the timecode is being ignored, possibly in the case of getting the keyframe/previous frame?
Notice how unstable the tracking is in the attached file.
http://davidsheftick.com/uploads/Tracking.zip

Tested on Blender 2.61 official release.
Windows 7 64bit and Ubuntu 11.04 32 bit.
4GB ram
NVIDIA Quadro 1600M
#9500 Core 2 Duo @ 2.6 GHz.
%%%

%%%Blender does not use the timecode index when tracking video files. This causes vary poor tracking results in video files that require TCs. If the entire sequence is cashed into memory then the tracking works fine, but once it comes to a point that is not yet cashed it goes crazy. I am not sure where the timecode is being ignored, possibly in the case of getting the keyframe/previous frame? Notice how unstable the tracking is in the attached file. http://davidsheftick.com/uploads/Tracking.zip Tested on Blender 2.61 official release. Windows 7 64bit and Ubuntu 11.04 32 bit. 4GB ram NVIDIA Quadro 1600M #9500 Core 2 Duo @ 2.6 GHz. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev42898. Thanks for the report, will close it now.

P.S. Trackign isn't really solid still because you're truing to track small piece of cicrle and it's really difficult to prevent track from sliding in this case. Think trying to track head of pin or the whole pin might help resolving sliding.
P.P.S. It'll be a bit difficult to solv this scene because all markers are placed to the same plane. It'll be much more accurate solve if there'll be some markers in the background.%%%

%%%Fixed in svn rev42898. Thanks for the report, will close it now. P.S. Trackign isn't really solid still because you're truing to track small piece of cicrle and it's really difficult to prevent track from sliding in this case. Think trying to track head of pin or the whole pin might help resolving sliding. P.P.S. It'll be a bit difficult to solv this scene because all markers are placed to the same plane. It'll be much more accurate solve if there'll be some markers in the background.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29688
No description provided.